cloudformation/nt548-network-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: NT548 - VPC + Public/Private Subnet + IGW + NAT + RT + EC2 + SG

Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetCidr:
    Type: String
    Default: 10.0.1.0/24
  PrivateSubnetCidr:
    Type: String
    Default: 10.0.2.0/24

  AllowedSSH:
    Type: String
    Default: 0.0.0.0/0
    Description: IP được SSH vào EC2 public

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Tên key pair để SSH

  InstanceType:
    Type: String
    Default: t3.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small

  AmiId:
    Type: AWS::EC2::Image::Id
    Description: AMI để tạo EC2

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
        Ref: VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: nt548-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: nt548-igw

  AttachIgw:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnetCidr
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: nt548-public-subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PrivateSubnetCidr
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: nt548-private-subnet

  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: [ NatEip, AllocationId ]
      SubnetId:
        Ref: PublicSubnet
      Tags:
        - Key: Name
          Value: nt548-nat-gw

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: nt548-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIgw
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway

  PublicSubnetAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: nt548-private-rt

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway

  PrivateSubnetAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet
      RouteTableId:
        Ref: PrivateRouteTable

  PublicEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from user IP
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Ref: AllowedSSH
      Monitoring: true 
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
          Description: Allow HTTP traffic
      Tags:
        - Key: Name
          Value: nt548-public-ec2-sg

  PrivateEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from public EC2
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: PublicEC2SG
      Monitoring: true 
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
          Description: Allow HTTP traffic
      Tags:
        - Key: Name
          Value: nt548-private-ec2-sg

  PublicEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: AmiId
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyName
      SubnetId:
        Ref: PublicSubnet
      SecurityGroupIds:
        - Ref: PublicEC2SG
      Tags:
        - Key: Name
          Value: nt548-public-ec2

  PrivateEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: AmiId
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyName
      SubnetId:
        Ref: PrivateSubnet
      SecurityGroupIds:
        - Ref: PrivateEC2SG
      Tags:
        - Key: Name
          Value: nt548-private-ec2

Outputs:
  VpcId:
    Description: VPC ID
    Value:
      Ref: VPC
  PublicSubnetId:
    Description: Public subnet
    Value:
      Ref: PublicSubnet
  PrivateSubnetId:
    Description: Private subnet
    Value:
      Ref: PrivateSubnet
  PublicEC2PublicIP:
    Description: Public IP of public EC2
    Value:
      Fn::GetAtt: [ PublicEC2, PublicIp ]
  PrivateEC2PrivateIP:
    Description: Private IP of private EC2
    Value:
      Fn::GetAtt: [ PrivateEC2, PrivateIp ]
